# NeoDOS

./: .gdbinit  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SESSION_HANDOFF.md  bootloader.efi  driver.ndm  kernel.elf  neodev.toml  opencode.json  test_dhcp_bridge.sh  test_dhcp_tap.sh  test_final.py  test_ndreg.py  test_redir.py  test_redirect.sh
libconsole-nxl/: Cargo.toml  console.ld
libconsole-nxl/.cargo/: config.toml
libconsole-nxl/src/: main.rs
libneodos/: Cargo.toml  user.ld
libneodos-nxl/: Cargo.toml  nxl.ld
libneodos-nxl/.cargo/: config.toml
libneodos-nxl/src/: error.rs  fs.rs  info.rs  io.rs  main.rs  mem.rs  process.rs  syscall.rs
libneodos/src/: args.rs  console.rs  export.rs  fs.rs  i18n.rs  io.rs  keyboard.rs  lib.rs  macros.rs  mem.rs  res.rs  seh.rs  syscall.rs
libnet/: Cargo.toml
libnet-nxl/: Cargo.toml  net.ld
libnet-nxl/.cargo/: config.toml
libnet-nxl/src/: main.rs
libnet/src/: lib.rs
neodos-bootloader/: Cargo.toml
neodos-bootloader/src/: file.rs  main.rs  memory.rs
neodos-kernel/: Cargo.toml  build.rs  build_font.py  kernel.ld
neodos-kernel/.cargo/: config.toml
neodos-kernel/src/: abi_freeze.rs  allocator.rs  boot_benchmark.rs  console.rs  cpu.rs  dll.rs  elf.rs  font.rs  globals.rs  graphics.rs  handle.rs  input.rs  invariants.rs  main.rs  memory.rs  module_abi.rs  nxl.rs  panic_classification.rs  pipe.rs  processes.rs  scheduler.rs  slab.rs  slab_container.rs  syscall.rs  testing.rs  trace.rs  usermode.rs  vga.rs  work_queue.rs
neodos-kernel/src/apc/: mod.rs
neodos-kernel/src/arch/: mod.rs
neodos-kernel/src/arch/x64/: cpu_local.rs  entry.rs  gdt.rs  idt.rs  ipi.rs  mod.rs  msr.rs  paging.rs  pic.rs  serial.rs  smp.rs
neodos-kernel/src/buffer/: block_cache.rs  mod.rs  page_cache.rs
neodos-kernel/src/cm/: api.rs  cache.rs  hive.rs  init.rs  manager.rs  mod.rs  tests.rs
neodos-kernel/src/cm/hive/: core.rs  keys.rs  mod.rs  serialize.rs  types.rs  values.rs
neodos-kernel/src/crash/: mod.rs
neodos-kernel/src/debugger/: mod.rs
neodos-kernel/src/devices/: mod.rs
neodos-kernel/src/dpc/: mod.rs
neodos-kernel/src/drivers/: acpi.rs  ahci.rs  ata.rs  block.rs  boot_ahci.rs  builtin_drivers.rs  caps.rs  driver_loader.rs  driver_manager.rs  driver_runtime.rs  fat32.rs  fsck_neodos.rs  gpt.rs  hotreload.rs  iso9660.rs  isolation.rs  keyboard.rs  manifest.rs  mod.rs  nvme.rs  pci.rs  ps2.rs  rtc.rs  rtc_bridge.rs  storage_manager.rs  virtio_blk.rs
neodos-kernel/src/drivers/abi/: mod.rs
neodos-kernel/src/drivers/boot_loader/: mod.rs
neodos-kernel/src/drivers/dependency/: mod.rs
neodos-kernel/src/drivers/device/: mod.rs  pci_scan.rs
neodos-kernel/src/drivers/keyboard/: KBDSP.klc  KBDUS.klc
neodos-kernel/src/drivers/nem/: driver.rs  event.rs  hst.rs  loader.rs  mod.rs  net_bridge.rs  policy.rs  runtime.rs  v3loader.rs
neodos-kernel/src/drivers/reference/: framebuffer.rs  mod.rs  ps2kbd.rs  storage.rs
neodos-kernel/src/drivers/usb_hid/: hid.rs  mod.rs  uhci.rs
neodos-kernel/src/eventbus/: mod.rs
neodos-kernel/src/exception/: dispatcher.rs  mod.rs
neodos-kernel/src/fs/: btree.rs  crc32.rs  drive_manager.rs  freelist.rs  fsck.rs  journal.rs  mod.rs  neodos_dir.rs  neodos_fs.rs  neodos_io.rs  neodos_v2.rs  snapshot.rs  vfs.rs  volume.rs
neodos-kernel/src/hal/: mod.rs  pci.rs  tests.rs
neodos-kernel/src/hal/raw/: cpu.rs  io.rs  mod.rs  msr.rs
neodos-kernel/src/hal/safe/: mod.rs  msr.rs
neodos-kernel/src/hal/x64/: cpu.rs  io.rs  irq.rs  irql.rs  mem.rs  mod.rs  time.rs
neodos-kernel/src/input/: manager.rs  mod.rs  vt.rs
neodos-kernel/src/interrupts/: ioapic.rs  mod.rs  msi.rs
neodos-kernel/src/irp/: mod.rs
neodos-kernel/src/kbd/: config.rs  event.rs  hotkey.rs  layout.rs  mod.rs  unicode.rs
neodos-kernel/src/kobj/: mod.rs  namespace.rs
neodos-kernel/src/kwait/: mod.rs
neodos-kernel/src/log/: mod.rs
neodos-kernel/src/memory/: buddy.rs  layout.rs  mod.rs
neodos-kernel/src/nem/: mod.rs
neodos-kernel/src/net/: arp.rs  counters.rs  dhcp.rs  dns.rs  e1000.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  nic.rs  socket.rs  tcp.rs  tests.rs  types.rs  udp.rs
neodos-kernel/src/object/: mod.rs  namespace.rs  pipe.rs  power.rs  section.rs  semaphore.rs  timer.rs  types.rs
neodos-kernel/src/power/: acpi.rs  coordinator.rs  mod.rs  plan.rs
neodos-kernel/src/scheduler/: address_space.rs  mod.rs
neodos-kernel/src/security/: access.rs  acl.rs  mod.rs  sam.rs  sid.rs  token.rs
neodos-kernel/src/services/: mod.rs
neodos-kernel/src/shell/: batch.rs  commands.rs  environment.rs  handler.rs  mod.rs  shell.rs
neodos-kernel/src/shell/commands/: attrib.rs  bench.rs  call.rs  cd.rs  copy.rs  cpuinfo.rs  crash.rs  date.rs  del.rs  devices.rs  devicesend.rs  dir.rs  drives.rs  echo.rs  fsck.rs  help.rs  keyb.rs  kill.rs  kobj.rs  label.rs  load.rs  loadlib.rs  md.rs  mem.rs  mod.rs  ndreg.rs  pri.rs  ps.rs  rd.rs  ren.rs  run.rs  (+6 more)
neodos-kernel/src/syscall/: cm.rs  handlers.rs  mod.rs  ob.rs  permission.rs  table.rs  tests.rs
neodos-kernel/src/timers/: apic.rs  hpet.rs  mod.rs
neodos-kernel/src/tsr/: mod.rs
neodos-kernel/src/urn/: mod.rs
neodos-kernel/src/vfs/: io.rs  kdrive.rs  mod.rs  mount.rs  partition.rs
neodos-kernel/src/virtio/: mod.rs  transport.rs  vring.rs
neodos-kernel/src/watchdog/: mod.rs
neodos-lsp/: Cargo.toml  README.md
neodos-lsp/src/: cache.rs  config.rs  database.rs  handlers.rs  indexer.rs  main.rs  server.rs  workspace.rs
tools/neodev/: Cargo.toml  README.md
tools/neodev/src/: build.rs  clean.rs  config.rs  discovery.rs  image.rs  main.rs  report.rs  run.rs  test_.rs
tools/nltc/: Cargo.toml
tools/nltc/src/: main.rs
userbin/dhcptest/: Cargo.toml
userbin/dhcptest/src/: main.rs
userbin/netcfg/: Cargo.toml
userbin/netcfg/src/: main.rs
userbin/nxlocale/: Cargo.toml
userbin/nxlocale/src/: main.rs
userbin/nxres/: Cargo.toml
userbin/nxres/src/: main.rs
userbin/nxverify/: Cargo.toml
userbin/nxverify/src/: main.rs
userbin/shtest/: Cargo.toml
userbin/shtest/src/: main.rs
(+540 files in other folders)
