[package]
name = "libneodos-nxl"
version = "0.2.1"
edition = "2021"
description = "NeoDOS shared library (NXL) — compiled as standalone binary at 0x1e000000"

[[bin]]
name = "libneodos-nxl"
path = "src/main.rs"
test = false

[profile.release]
panic = "abort"
opt-level = 3
lto = true
debug = false

[profile.dev]
panic = "abort"
