[package]
name = "neodos_kernel"
version = "0.10.5"
edition = "2021"

[dependencies]
log = "0.4"
x86_64 = { version = "0.14.10", default-features = false, features = ["abi_x86_interrupt", "instructions"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
linked_list_allocator = "0.10"

[features]
default = []
validation = []   # Extra runtime invariant checks + trace logging
stress = ["validation"]  # Stress test harness active during boot

[profile.release]
opt-level = 3
lto = true
strip = false
debug = true

[[bin]]
name = "neodos_kernel"
path = "src/main.rs"
