[package]
name = "neodos-lsp"
version = "0.1.0"
edition = "2024"
description = "NeoDOS Language Server Protocol implementation — IDE support for NeoDOS kernel, drivers, and userland development"

[[bin]]
name = "neodos-lsp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.97"
lsp-server = "0.7"
dashmap = "6"
rayon = "1"
walkdir = "2"
log = "0.4"
env_logger = "0.11"
crossbeam = "0.8"
parking_lot = "0.12"
ignore = "0.4"
globset = "0.4"
url = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
