[package]
name = "neodev"
version = "0.1.0"
edition = "2021"
description = "NeoDOS Development Tool — unified build, image, run, test, and CI toolchain"

[[bin]]
name = "neodev"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
colored = "2"
walkdir = "2"


