[package]
name = "neodev"
version = "0.1.0"
edition = "2021"
description = "NeoDOS Development Tool — unified build, image, run, test, and CI toolchain"

[[bin]]
name = "neodev"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3+spec-1.1.0"
colored = "2.2.0"
walkdir = "2.5.0"


