[package]
name = "dhcptest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dhcptest"
path = "src/main.rs"
test = false

[dependencies]
libneodos = { path = "../../libneodos" }
libnet = { path = "../../libnet" }

[profile.release]
panic = "abort"
opt-level = 3
lto = true
debug = false

[profile.dev]
panic = "abort"
