[package]
name = "nxlocale"
version = "0.1.0"
edition = "2021"
description = "Locale manager — list, change, inspect locales"

[[bin]]
name = "nxlocale"
path = "src/main.rs"
test = false

[dependencies]
libneodos = { path = "../../libneodos" }

[profile.release]
panic = "abort"
opt-level = 3
lto = true
debug = false

[profile.dev]
panic = "abort"
