[package]
name = "shtest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shtest"
path = "src/main.rs"
test = false

[dependencies]
libneodos = { path = "../../libneodos" }
neoshell_lib = { path = "../neoshell", package = "neoshell" }

[profile.release]
panic = "abort"
opt-level = 3
lto = true
debug = false

[profile.dev]
panic = "abort"
